--- a/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>INICIO</title>
+        <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
+		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
+		<meta charset="utf-8">
+         <title>INICIO</title>
 </head>
 <body>
-   <header>
-     <nav>
-       
-     </nav>
-   </header>
-<h1> EMPLEOS Y OFERTAS LABORALES </h1>
+   <header th:replace="/layouts/header::header"></header> 
+
+ <h1> EMPLEOS Y OFERTAS LABORALES </h1>
+<div class= "imagen">
+<img th:src="@{/images/imagen.webp}" alt="imagen" height="250px">
+</div> 
+ <section>
   
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-  </div>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="../static/imagen/webp" class="d-block w-100" alt="imagen1">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="imagen2">
-    </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="imagen3">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-  </div>
-   <section>
    <p>Bienvenido a nuestro sitio web!!! <br> 
-    El mejor sitio para conseguir nuevas oportunidades en el mundo laboral,<br> con las mejores ofertas para el empleo que buscas. Tambien enfocados en grandes y pequeñas empresas <br> que
-    estan en busqueda de perfiles laborales. </p> 
+    El mejor portal para conseguir nuevas oportunidades en el mundo laboral,<br> con las mejores ofertas para el empleo que buscas. Tambien enfocado en grandes y pequeñas empresas <br> que
+    estan en busqueda de perfiles laborales. <br> Registrate o Inicia Sesion aqui abajo: </p> 
   </section>
+  <section>
+    <div class="d-grid gap-2 col-6 mx-auto">
+     <button class="btn btn-primary" type="button">Registrarse</button>
+     <button class="btn btn-dark" type="button">Iniciar Sesion</button>
+    </div>
+</section>
+  <footer>
+  	<p>2022. Portal de Empleos y Ofertas Laborales – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 S. S. de Jujuy República
+	Argentina</p>
+            <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
+			<script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
+			<script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  </footer>
 </body>
 </html>
