registro de ciudadanos

--- a/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
   </section>
   <section>
     <div class="d-grid gap-2 col-6 mx-auto">
-     <button class="btn btn-primary" type="button">Registrarse</button>
+     <a th:ref="@{/ciudadano/nuevo}" class="btn btn-primary" type="button">Registrarse</a>
      <button class="btn btn-dark" type="button">Iniciar Sesion</button>
     </div>
 </section>
