--- a/TrabajoFinal_Grupo18/src/main/resources/templates/registro_ciudadano.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/registro_ciudadano.html
@@ -63,7 +63,7 @@
     <input type="date" class="form-control" id="FechaNacId" placeholder="Ingrese fecha de nacimiento">
   </div>
   
-  <div class="col-12">
+  <div class="col-12 centraar">
     <button class="btn btn-primary" type="submit">Guardar</button>
     <button class="btn btn-secondary" type="button">Cancelar</button>
   </div>
