--- a/TrabajoFinal_Grupo18/src/main/resources/static/css/style.css
+++ b/TrabajoFinal_Grupo18/src/main/resources/static/css/style.css
@@ -1,6 +1,6 @@
 @charset "ISO-8859-1";
 
-.imagen{
+.centraar{
 	text-align: center;
     margin-top: 20px;
 }
@@ -28,6 +28,7 @@ h1{
 	
 }
 h2{
+	font-size: 40px;
 	margin: 40px;
 	text-align: center;
 }
