--- a/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
@@ -21,8 +21,26 @@
   </section>
   <section>
     <div class="d-grid gap-2 col-6 mx-auto">
-     <a th:ref="#" class="btn btn-primary" type="button">Iniciar como Ciudadano</a>
-     <button class="btn btn-dark" type="button">Iniciar como Empleador</button>
+     <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Iniciar como Ciudadano</a>
+     <div class="modal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Modal body text goes here.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+     
+     <button  th:href="@{/ciudadano/nuevo}" class="btn btn-dark" type="button">Iniciar como Empleador</button>
     </div>
 </section>
   <footer>
