--- a/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
@@ -17,38 +17,18 @@
   
    <p>Bienvenido a nuestro sitio web!!! <br> 
     El mejor portal para conseguir nuevas oportunidades en el mundo laboral,<br> con las mejores ofertas para el empleo que buscas. Tambien enfocado en grandes y pequeñas empresas <br> que
-    estan en busqueda de perfiles laborales. <br> Registrate o Inicia Sesion aqui abajo: </p> 
+    estan en busqueda de perfiles laborales. <br> Elija un modo para iniciar sesion aqui abajo:  </p> 
   </section>
   <section>
-    <div class="d-grid gap-2 col-6 mx-auto">
-     <a class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Iniciar como Ciudadano</a>
-     <div class="modal" tabindex="-1">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
+    <div class="d-grid gap-2 col-4 mx-auto">
+     <a th:href="@{/ciudadano/inicio}" class="btn btn-primary" type="button" > 
+     Ciudadano</a>
+      <a th:href="@{/ciudadano/inicio}" class="btn btn-dark" type="button"> 
+     Empleador</a>
     </div>
-  </div>
-</div>
-     
-     <button  th:href="@{/ciudadano/nuevo}" class="btn btn-dark" type="button">Iniciar como Empleador</button>
-    </div>
-</section>
-  <footer>
-  	<p>2022. Portal de Empleos y Ofertas Laborales – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 S. S. de Jujuy República
-	Argentina</p>
-            <script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
-			<script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
-			<script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  </footer>
+  </section>
+
+  <footer th:replace="/layouts/footer::footer"></footer>
+ 
 </body>
 </html>
