--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/header.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/header.html
@@ -14,7 +14,7 @@
       <img th:src="@{/images/imagen4.jpg}" alt="logo" width="50" height="34" class="d-inline-block align-text-top">
       BIENVENIDO/A 
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"  role="button" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
@@ -25,26 +25,13 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link"  aria-current="page" href="#">INICIO</a>
+            <a class="nav-link"  aria-current="page" th:href="@{/inicio/menu}">INICIO</a>
           </li>
           <li class="nav-item">
             <a class="nav-link " aria-current="page" href="#">SFASFF</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
           </li>
         </ul>
       </div>
