--- a/TrabajoFinal_Grupo18/src/main/resources/templates/registro_ciudadano.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/registro_ciudadano.html
@@ -13,7 +13,7 @@
 <div class="row justify-content-center mt-5 pt-5">
 <div class="col-md-10 ">
  <h2> Registro de Nuevo Ciudadano</h2>
- <form class="row g-3 needs-validation" th:action="@{/ciudadano/postCiudadano}" th:object="${ciudadano}" method="POST>
+ <form class="row g-3 needs-validation" th:action="@{/ciudadano/postCiudadano}" th:object="${ciudadano}" method="POST">
   <div class="col-md-4 position-relative">
     <label for="idDNI" class="form-label">Dni</label>
     <input type="number" class="form-control" id="idDNI" placeholder="Ingrese DNI">
