--- a/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/index.html
@@ -22,9 +22,9 @@
   <section>
     <div class="d-grid gap-2 col-4 mx-auto">
      <a th:href="@{/ciudadano/inicio}" class="btn btn-primary" type="button" > 
-     Ciudadano</a>
+     Soy Ciudadano</a>
       <a th:href="@{/empleador/inicio}" class="btn btn-dark" type="button"> 
-     Empleador</a>
+     Soy Empleador</a>
     </div>
   </section>
 
