--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/header.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/header.html
@@ -25,13 +25,16 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link"  aria-current="page" th:href="@{/inicio/menu}">INICIO</a>
+            <a class="nav-link"  aria-current="page" th:href="@{/inicio/menu}">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="#">SFASFF</a>
+            <a class="nav-link " aria-current="page" th:href="@{/ciudadano/inicio}">Ver Empleos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" th:href="@{/empleador/inicio}">Crear Empleo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{#}">Contactanos</a>
           </li>
         </ul>
       </div>
