--- a/TrabajoFinal_Grupo18/src/main/resources/templates/crearCv.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/crearCv.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
 		<meta charset="utf-8">
-         <title>Curriculum Vitae </title>
+         <title>Crear Curriculum Vitae</title>
 </head>
 <body>
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
