--- a/TrabajoFinal_Grupo18/src/main/resources/templates/inscripCurso.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/inscripCurso.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+        <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
+		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
+		<meta charset="utf-8">
+         <title>Inscripcion a Curso</title>
 </head>
 <body>
-
+   <header th:replace="/layouts/headerCiu::headerCiu"></header> 
+     
+     
+     
+   <footer th:replace="/layouts/footer::footer"></footer>
 </body>
 </html>
