--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
@@ -19,10 +19,10 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
        <a class="nav-link" th:href="@{/ciudadano/inicioCiudadano}">Inicio</a>
-        <a class="nav-link active" aria-current="page" href="#">Crear CV</a>
-        <a class="nav-link" href="#">Ver CV</a>
+        <a class="nav-link active" aria-current="page" th:href="@{/ciudadano/crearCurriculum}">Crear CV</a>
+        <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
         
-        <a class="nav-link ">Inscribirse a un curso</a>
+        <a class="nav-link " th:href="@{/curso/inscripCurso}">Inscribirse a un curso</a>
         <a class="nav-link" th:href="@{/inicio/menu}">Cerrar Sesion</a>
       </div>
      </div>
