se agrego contenido a los htmls de empleador

--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerCiu.html
@@ -21,7 +21,7 @@
        <a class="nav-link" th:href="@{/ciudadano/inicioCiudadano}">Inicio</a>
         <a class="nav-link active" aria-current="page" th:href="@{/ciudadano/crearCurriculum}">Crear CV</a>
         <a class="nav-link"  th:href="@{/ciudadano/verCurriculum}">Ver CV</a>
-        
+        <a class="nav-link " th:href="@{/ciudadano/verOfertasLaborales}">Ver Empleos</a>
         <a class="nav-link " th:href="@{/curso/inscripCurso}">Inscribirse a un curso</a>
         <a class="nav-link" th:href="@{/inicio/menu}">Cerrar Sesion</a>
       </div>
