--- a/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerEmp.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/layouts/headerEmp.html
@@ -7,7 +7,7 @@
 <body>
   <header th:fragment="headerEmp">
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" >
       <img th:src="@{/images/imagen4.jpg}" alt="logo" width="50" height="34" class="d-inline-block align-text-top">
@@ -18,10 +18,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled">Disabled</a>
+        <a class="nav-link" th:href="@{/empleador/inicioEmpleador}">Inicio</a>
+        <a class="nav-link"  th:href="@{/empleador/perfiles}">Ver perfiles laborales</a>
+        <a class="nav-link"  th:href="@{/empleador/misEmpleos}">Mis ofertas laborales</a>
+        <a class="nav-link" th:href="@{/inicio/menu}">Cerrar Sesion</a>
       </div>
      </div>
     </div>
