--- a/TrabajoFinal_Grupo18/src/main/resources/templates/pagCiudadano.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/pagCiudadano.html
@@ -4,57 +4,54 @@
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
 		<meta charset="utf-8">
-         <title>Ofertas Laborales</title>
+         <title>INICIO DEL CIUDADANO</title>
 </head>
 <body>
    <header th:replace="/layouts/headerCiu::headerCiu"></header> 
 
  
-    <h1 class="card-title">BIENVENIDOS</h1>
-    <h2> Las mejores ofertas estas aqui.</h2>
-    <p class="card-text">SFSDGGDSJNDSKNDDSFKVDVDSKVNDSLVND</p>
-  <section>
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-   <div class="col">
-    <div class="card">
-     <h3> TITULO</h3>
-      <div class="card-body">
-        <h5 class="card-title">Cantidad de vacantes:</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-         <div class="d-grid gap-2">
-        <button class="btn btn-primary" type="button">Postularse</button>
-     </div>
-      </div>
-    </div>
-   </div>
-   
-   <div class="col">
-    <div class="card">
-     <h3> TITULO</h3>
-      <div class="card-body">
-        <h5 class="card-title">Cantidad de vacantes:</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-         <div class="d-grid gap-2">
-        <button class="btn btn-primary" type="button">Postularse</button>
-     </div>
-      </div>
-    </div>
-   </div>
-   
-   <div class="col">
-    <div class="card">
-      <h3> TITULO</h3>
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-         <div class="d-grid gap-2">
-        <button class="btn btn-primary" type="button">Postularse</button>
-     </div>
-      </div>
-    </div>
-   </div>
-   
+    <div class="card bg-dark text-white">
+  <img th:src="@{/images/img.jpg}" class="card-img" alt="fondo" height="300px">
+  <div class="card-img-overlay">
+    <h2 class="card-title">OFERTAS LABORALES</h2>
+    <h4 class="centraar">Bienvenido/a!!</h4> 
+    <p class="card-text"> Gracias por su registro. En este sitio podra encontrar el empleo que esta buscando.<br>
+     Antes de postularse a un empleo, debera crear su cv para que los empleadores puedan ver su perfil.</p>
   </div>
+</div>
+  <section>
+   <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+   <div class="card" style="width: 18rem;">
+      <img th:src="@{/images/empleo.jpg}" class="card-img-top" alt="empleo" height="180px">
+      <div class="card-body">
+        <h5 class="card-title">Buscar Empleo</h5>
+         <p class="card-text">Los mejores oportunidades en el mundo laboral estan aqui.</p>
+        <a href="#" class="btn btn-dark">Ver Empleos</a>
+      </div>
+    </div>
+    </div>
+    <div class="col">
+    <div class="card" style="width: 18rem;">
+      <img th:src="@{/images/imagen.webp}" class="card-img-top" alt="dd" height="180px">
+      <div class="card-body">
+        <h5 class="card-title">Crear CV</h5>
+         <p class="card-text">Antes de postularte a un empleo, debes crear tu curriculum vitae.</p>
+        <a href="#" class="btn btn-secondary">Crear Cv</a>
+      </div>
+    </div>
+    </div>
+    <div class="col">
+     <div class="card" style="width: 18rem;">
+      <img th:src="@{/images/imagen3.webp}" class="card-img-top" alt="..." height="180px">
+      <div class="card-body">
+        <h5 class="card-title">Capacitacion</h5>
+         <p class="card-text"> Aqui podras encontrar los mejores cursos para seguir tu capacitacion.</p>
+        <a href="#" class="btn btn-primary">Ver Cursos</a>
+      </div>
+    </div>  
+    </div>
+    </div> 
   </section>
 
   <footer th:replace="/layouts/footer::footer"></footer>
