--- a/TrabajoFinal_Grupo18/src/main/resources/templates/iniciarSesion.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/iniciarSesion.html
@@ -14,24 +14,34 @@
     <div class="col-md-6">
      
      <h2> Iniciar Sesion </h2>
-     <h3 class="centraar"> Bienvenido al mejor sitio para tu empresa!!</h3>
-     <form >
+     <h3 class="centraar"> El mejor sitio para tus empleos!!</h3>
+     
+     <form th:object="${usuario}" th:action="@{/inicio/login}" method="post">
      <div class="mb-4">
-      <label for="CuitId" class="form-label">Cuit</label>
-       <input type="number" class="form-control" id="CuitId" placeholder="Ingrese Cuit">
+      <label for="dniId" class="form-label">Dni o Cuit</label>
+       <input type="number" class="form-control" id="dniId" placeholder="Ingrese username" name="username">
      </div>
      <div class="mb-4">
       <label for="contraseñaId" class="form-label">CONTRASEÑA</label>
-       <input type="password" class="form-control" id="contraseñaId" placeholder="Ingrese contraseña">
+       <input type="password" class="form-control" id="contraseñaId" placeholder="Ingrese contraseña" name="contraseña">
      </div>
      <div class="col-12 centraar">
       <button type="submit" class="btn btn-primary">Iniciar Sesion</button>
       <a th:href="@{/inicio/menu}" class="btn btn-dark" role="button">Cancelar</a>
      </div> 
      </form>
+     
      <div class=centraar>
      <p> No tenes una cuenta? Registrate aqui abajo:</p>
-     <a th:href="@{/empleador/nuevo}" class="btn btn-secondary" role="button">Registrarse</a>
+     <div class="dropdown centraar">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
+    Registrarse
+    </button>
+      <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
+        <li><a class="dropdown-item" th:href="@{/ciudadano/nuevo}">Ciudadano</a></li>
+        <li><a class="dropdown-item" th:href="@{/empleador/nuevo}">Empleador</a></li>
+      </ul>
+     </div>
      </div>
     </div>
    </div> 
