--- a/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
+++ b/TrabajoFinal_Grupo18/src/main/resources/templates/verOfertas.html
@@ -4,16 +4,52 @@
         <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>	
 		<meta charset="utf-8">
-<title>Insert title here</title>
+<title>Ofertas Laborales</title>
 </head>
 <body>
   <header th:replace="/layouts/headerCiu::headerCiu"></header>
    
-   
-   
-   
-   
-   
+    <div class="card bg-dark text-white">
+  <img th:src="@{/images/img.jpg}" class="card-img" alt="fondo" height="300px">
+  <div class="card-img-overlay">
+    <h2 class="card-title">OFERTAS LABORALES</h2>
+    <h4 class="centraar">Bienvenido/a!!</h4> 
+    <p class="card-text"> Aqui puede encontrar el empleo que esta buscando.</p>
+  </div>
+</div>
+  <div class="container">
+<div class="row justify-content-center mt-5 pt-5">
+<button type="button" class="btn btn-dark">Mostrar Todos</button>
+  <form class="row g-2">
+  <div class="col-md-6">
+    <label for="iIdprovincia" class="form-label">Filtrar por provincia: </label>
+    <input type="text" class="form-control" id="iIdprovincia" placeholder="Ingrese provincia:">
+    <button type="submit" class="btn btn-primary">Filtrar</button>
+  </div>
+  <div class="col-md-6">
+    <label for="inputFecha" class="form-label">Filtrar por fecha:</label>
+    <input type="date" class="form-control" id="inputFecha">
+     <button type="submit" class="btn btn-primary">Filtrar</button>
+  </div>
+  </form>
+  
+   </div>
+  </div>
+  
+    <section>
+   <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+   <div class="card" style="width: 18rem;">
+      <img th:src="@{/images/empleo.jpg}" class="card-img-top" alt="empleo" height="180px">
+      <div class="card-body">
+        <h5 class="card-title">cvzv</h5>
+         <p class="card-text">scavv</p>
+        <a href="#" class="btn btn-dark">ir</a>
+      </div>
+    </div>
+    </div>
+   </div>
+   </section>
    <footer th:replace="/layouts/footer::footer"></footer>
 </body>
 </html>
